--- a/scss/_opening.scss
+++ b/scss/_opening.scss
@@ -41,8 +41,9 @@ header {
 body.opening-page{
 	background: #466368;
     background: -webkit-linear-gradient(#F535AA, #848b79);
-    background: -o-linear-gradient(#F535AA, #848b79);
-    background: linear-gradient(#F535AA, #848b79);
+    // background: -o-linear-gradient(#F535AA, #848b79);
+    // background: linear-gradient(#F535AA, #848b79);
+    // background: no-repeat;
 
 	.opening{
 		/*text-align: center;*/
